--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@
 .navbar{
   background-color: rgb(74,133,75);
   color: white;
+  /* position: fixed; */
 }
 
 .choose{
@@ -102,4 +103,16 @@
   /* background: transparent; */
   box-shadow: 0px 0px 20px white;
  transition:400ms ease all;
+}
+
+body > div > div{
+  margin-top: 30px;
+  margin-left: 315px;
+  font-weight: bold;
+  font-size: 53px;
+}
+
+id{
+  color: rgb(253,188,22);
+  font-size: 100px;
 }
