--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   }
 } */
 
-.text-color{
+/* .text-color{
   color: rgb(81,135,78);
 }
 
@@ -68,22 +68,22 @@
   padding: 0;
   margin: 0%;
   /* box-sizing: border-box; */
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  /* font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .navbar{
   background-color:rgb(74,133,75);
-  color: #fff;
+  color: #fff; */
   /* display: flex; */
   /* justify-content: space-between; */
-  padding: 0% 4%;
+  /* padding: 0% 4%;
   position: relative;
 }
 
 .nav-left{
-  display: flex;
+  display: flex; */
   /* position: absolute; */
-}
+/* }
 
 .nav-left ul {
   display: flex;
@@ -171,4 +171,4 @@ img.p{
   position: absolute;
   top: 74px;
   right: 200px;
-}
+} */ 
